<resources>
    <string name="app_name">IShopping</string>
    <!-- Home -->
    <string name="label_home">Home</string>
    <string name="label_setting">Setting</string>
    <string name="label_like">Like</string>

    <!--search -->
    <string name="label_search">Search</string>
    <string name="description_search_icon">Search Icon</string>
    <string name="label_banner_discount_percent">30%</string>
    <string name="label_banner_title">Today\'s Speacial!</string>
    <string name="label_banner_description">Get discount for every \norder, only valid for today</string>
    <string name="label_home_greeting">환영합니다. 👋</string>
    <string name="label_home_title">I Shopping 입니다.</string>
    <string name="label_home_special_offers">Special Offers</string>
    <string name="label_home_suggestion">이런 가방은 어떠신가요?</string>
    <string name="description_shopping_item">검색 상품</string>
    <string name="label_bag">가방</string>
    <string name="label_toolbar_like">My Wishlist</string>

    <!--shimmer -->
    <string name="description_shimmer_shopping_item">검색 상품 스켈레톤</string>

    <!--Setting -->
    <string name="label_toolbar_setting">Mode Setting</string>
    <string name="label_dark_mode">다크 모드</string>
    <string name="label_white_mode">화이트 모드</string>
    <string name="label_system_mode">시스템 설정과 같이</string>


</resources>
