<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="181dp"
    android:background="@drawable/banner_rectangle">

    <TextView
        android:id="@+id/tv_banner_discount_percent"
        style="@style/AppText.H2.GreyScale900.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:text="@string/label_banner_discount_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_banner_title"
        style="@style/AppText.H6.GreyScale900.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/label_banner_title"
        app:layout_constraintStart_toStartOf="@id/tv_banner_discount_percent"
        app:layout_constraintTop_toBottomOf="@id/tv_banner_discount_percent" />

    <TextView
        android:id="@+id/tv_banner_description"
        style="@style/AppText.BodySmall.GreyScale900.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/label_banner_description"
        app:layout_constraintStart_toStartOf="@id/tv_banner_title"
        app:layout_constraintTop_toBottomOf="@id/tv_banner_title" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_banner_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/banner_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="@style/AppRoundedImage" />

</androidx.constraintlayout.widget.ConstraintLayout>