<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_setting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_toolbar_like"
                style="@style/AppTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/label_toolbar_setting" />
        </com.google.android.material.appbar.MaterialToolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_dark_mode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:paddingTop="10dp"
            android:paddingEnd="24dp"
            android:paddingBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_setting">

            <TextView
                android:id="@+id/tv_dark_mode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_dark_mode"
                style="@style/AppSettingItem"
                app:layout_constraintBottom_toBottomOf="@id/switch_dark_mode"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/switch_dark_mode" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_dark_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/layout_dark_mode" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_white_mode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:paddingTop="10dp"
            android:paddingEnd="24dp"
            android:paddingBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_dark_mode">

            <TextView
                android:id="@+id/tv_white_mode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/AppSettingItem"
                android:text="@string/label_white_mode"
                app:layout_constraintBottom_toBottomOf="@id/switch_white_mode"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/switch_white_mode" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_white_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/layout_white_mode" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_system_mode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:paddingTop="10dp"
            android:paddingEnd="24dp"
            android:paddingBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_white_mode">

            <TextView
                android:id="@+id/tv_system_mode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/AppSettingItem"
                android:text="@string/label_system_mode"
                app:layout_constraintBottom_toBottomOf="@id/switch_system_mode"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/switch_system_mode" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_system_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/layout_system_mode" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
